@@ -76,6 +76,8 @@ Action.jump-to-pair = jsyntaxpane.actions.JumpToPairAction, control OPEN_BRACKET
 Action.jump-to-pair.MenuText = Jump to Pair
 Action.complete-word = jsyntaxpane.actions.CompleteWordAction, control K
 Action.complete-word.MenuText = Complete Word
+Action.smart-home = jsyntaxpane.actions.SmartHomeAction, HOME
+Action.smart-home-select = jsyntaxpane.actions.SmartHomeSelectAction, shift HOME
 #
 # These configure the Default Actions provided by DefaultEditorKit for popup menus
 DefaultAction.copy-to-clipboard.MenuText = Copy
